--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@ $TWITTER_BLUE: rgb(20, 129, 195);
 $ACCENT_PURPLE: rgb(175, 52, 175);
 $ACCENT_SUCCESS: rgb(8, 136, 16);
 $ACCENT_ERROR: rgb(197, 61, 61);
+$ACCENT_WARN: orange;
 
 * {
     outline: none;
@@ -90,6 +91,9 @@ h1, h2, h3, p { margin: 0; padding: 0; }
   }
   &[data-task-status="ban"] {
     color: $ACCENT_ERROR;
+  }
+  &[data-task-status="warn"] {
+    color: $ACCENT_WARN;
   }
   .gears {
     width: 2rem;
