--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,7 +25,7 @@ body {
   }
 }
 
-.header, .controls span.prefix {
+.header, #controls span.prefix {
     font-family: 'Lobster', cursive;
     text-align: center;
     color: $TWITTER_BLUE;
@@ -35,47 +35,55 @@ body {
     color: $ACCENT_PURPLE;
 }
 
-.input-field {
-  /* label color */
-  label { color: $TWITTER_BLUE !important; }
-  input {
-    font-weight: 500;
-    color: $ACCENT_PURPLE;
+#controls .card {
+  justify-content: space-around;
+  padding: 1rem;
 
-    &[type=text] {
-      /* label underline focus color */
-      &:focus {
-        border-bottom: 1px solid $TWITTER_BLUE !important;
-        box-shadow: 0 1px 0 0 $TWITTER_BLUE !important;
-        /* label focus color */
-        & + label {
-          color: $TWITTER_BLUE !important;
+  .input-field {
+    /* label color */
+    label { color: $TWITTER_BLUE !important; }
+    input {
+      font-weight: 500;
+      color: $ACCENT_PURPLE;
+
+      &[type=text] {
+        /* label underline focus color */
+        &:focus {
+          border-bottom: 1px solid $TWITTER_BLUE !important;
+          box-shadow: 0 1px 0 0 $TWITTER_BLUE !important;
+          /* label focus color */
+          & + label {
+            color: $TWITTER_BLUE !important;
+          }
+        }
+      }
+    }
+    /* icon prefix focus color */
+    .prefix {
+      color: $TWITTER_BLUE;
+      &.active, &.valid {
+        color: $ACCENT_PURPLE;
+      }
+      &.invalid {
+        color: $ACCENT_ERROR;
+        & + input {
+          color: $ACCENT_ERROR;
+          border-bottom: 1px solid $ACCENT_ERROR !important;
+          box-shadow: 0 1px 0 0 $ACCENT_ERROR !important;
         }
       }
     }
   }
-  /* icon prefix focus color */
-  .prefix {
-    &.active, &.valid {
-      color: $ACCENT_PURPLE;
-    }
-    &.invalid {
-      color: $ACCENT_ERROR;
-      & + input {
-        color: $ACCENT_ERROR;
-        border-bottom: 1px solid $ACCENT_ERROR !important;
-        box-shadow: 0 1px 0 0 $ACCENT_ERROR !important;
-      }
-    }
+}
+
+#tasks {
+  li {
+    margin: 0;
   }
 }
 
-.controls {
-  justify-content: space-around;
-}
-
 .collapsible-header {
-  &.controls, &[data-task-id="checkUser"], &[data-task-id="getRefTweet"] {
+  &[data-task-id="checkUser"], &[data-task-id="getRefTweet"] {
     cursor: unset;
   }
   text-align: left;
@@ -85,9 +93,7 @@ body {
 }
 
 .collapsible-body {
-  &:not(.results) {
-    background-color: rgb(255, 255, 255);
-  }
+  background-color: rgb(255, 255, 255);
   h5 {
     margin-top: 0;
   }
