Add: name-X call to action

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -125,6 +125,12 @@ body {
   }
 }
 
+.emoji {
+  width: 1em;
+  height: 1em;
+  vertical-align: text-top;
+}
+
 footer {
   font-size: .875em;
   margin-top: 6em;
