--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -83,12 +83,31 @@ body {
 }
 
 .collapsible-header {
-  &[data-task-id="checkUser"], &[data-task-id="getRefTweet"] {
+  text-align: left;
+  transition: 0.5s background-color ease-in-out 2s;
+  &[data-task-id="checkUser"] {
     cursor: unset;
   }
-  text-align: left;
   &:focus {
     background-color: rgb(255, 255, 255) !important;
+  }
+  &.highlight {
+    animation: highlight-animation 1s cubic-bezier(0.24, 0, 0.38, 1) 3;
+  }
+}
+@keyframes highlight-animation {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  50% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
 
