CHANGE: using webpack, instead of gulp build chain

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -146,7 +146,7 @@ body {
   .gears {
     width: 2rem;
     margin-right: 1rem;
-    background: transparent url('../../img/gears.svg') bottom center no-repeat;
+    background: transparent url('/img/gears.svg') bottom center no-repeat;
     background-size: contain;
     margin-right: 7px;
   }
